BDO-5 - Export csv de países

--- a/Obligatorio Big Data/1-procesamiento_landing.ipynb
+++ b/Obligatorio Big Data/1-procesamiento_landing.ipynb
@@ -70,8 +70,8 @@
     "# Funciones para leer archivos CSV y PKL\n",
     "def leer_csv(ruta):\n",
     "    try:\n",
-    "        df = pd.read_csv(ruta)\n",
-    "        return df\n",
+    "        df_archivo = pd.read_csv(ruta)\n",
+    "        return df_archivo\n",
     "    except Exception as e:\n",
     "        print(f\"Error al leer el archivo CSV '{ruta}': {e}\")\n",
     "        return None\n",
@@ -79,8 +79,8 @@
     "\n",
     "def leer_pkl(ruta):\n",
     "    try:\n",
-    "        df = pd.read_pickle(ruta)\n",
-    "        return df\n",
+    "        df_archivo = pd.read_pickle(ruta)\n",
+    "        return df_archivo\n",
     "    except Exception as e:\n",
     "        print(f\"Error al leer el archivo PKL '{ruta}': {e}\")\n",
     "        return None\n",
