--- a/Obligatorio Big Data/2-procesamiento_refined.ipynb
+++ b/Obligatorio Big Data/2-procesamiento_refined.ipynb
@@ -16,8 +16,8 @@
    "id": "0e7ffc0b-d318-4200-bd69-8b6fbf265640",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-08T01:25:00.499553Z",
-     "start_time": "2024-07-08T01:24:59.079046Z"
+     "end_time": "2024-07-10T07:27:22.663108Z",
+     "start_time": "2024-07-10T07:27:20.593335Z"
     }
    },
    "source": [
@@ -39,15 +39,15 @@
      ]
     }
    ],
-   "execution_count": 28
+   "execution_count": 56
   },
   {
    "cell_type": "code",
    "id": "f90a84d2-efe5-4eb8-8ca1-7aa88fa27638",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-08T01:25:01.938533Z",
-     "start_time": "2024-07-08T01:25:00.504671Z"
+     "end_time": "2024-07-10T07:27:24.059675Z",
+     "start_time": "2024-07-10T07:27:22.668815Z"
     }
    },
    "source": [
@@ -77,7 +77,7 @@
     "df_atletas = pd.read_csv(directorio_raw / 'olympic_athletes.csv')"
    ],
    "outputs": [],
-   "execution_count": 29
+   "execution_count": 57
   },
   {
    "cell_type": "markdown",
@@ -92,8 +92,8 @@
    "id": "fb6045b4-c61f-45fb-9bae-0ff65e93a9ef",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-08T01:25:01.959777Z",
-     "start_time": "2024-07-08T01:25:01.940573Z"
+     "end_time": "2024-07-10T07:27:24.088214Z",
+     "start_time": "2024-07-10T07:27:24.061946Z"
     }
    },
    "source": [
@@ -285,7 +285,7 @@
     "\n"
    ],
    "outputs": [],
-   "execution_count": 30
+   "execution_count": 58
   },
   {
    "cell_type": "markdown",
@@ -300,8 +300,8 @@
    "id": "caf107d443ae890e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-08T01:25:02.029773Z",
-     "start_time": "2024-07-08T01:25:01.964122Z"
+     "end_time": "2024-07-10T07:27:24.170401Z",
+     "start_time": "2024-07-10T07:27:24.093010Z"
     }
    },
    "source": [
@@ -828,15 +828,15 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 31
+   "execution_count": 59
   },
   {
    "cell_type": "code",
    "id": "e72221b5-9897-4438-8282-f54112e5adfa",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-08T01:25:02.041832Z",
-     "start_time": "2024-07-08T01:25:02.032556Z"
+     "end_time": "2024-07-10T07:27:24.186056Z",
+     "start_time": "2024-07-10T07:27:24.174633Z"
     }
    },
    "source": [
@@ -847,15 +847,15 @@
     "df_hosts['game_year'] = df_hosts['game_year'].astype(int)"
    ],
    "outputs": [],
-   "execution_count": 32
+   "execution_count": 60
   },
   {
    "cell_type": "code",
    "id": "d0225cce45fd1fcd",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-08T01:25:02.057276Z",
-     "start_time": "2024-07-08T01:25:02.047997Z"
+     "end_time": "2024-07-10T07:27:24.194110Z",
+     "start_time": "2024-07-10T07:27:24.188689Z"
     }
    },
    "source": [
@@ -863,15 +863,15 @@
     "df_hosts = trim_strings(df_hosts)"
    ],
    "outputs": [],
-   "execution_count": 33
+   "execution_count": 61
   },
   {
    "cell_type": "code",
    "id": "849bb1f000c92853",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-08T01:25:02.121024Z",
-     "start_time": "2024-07-08T01:25:02.060067Z"
+     "end_time": "2024-07-10T07:27:24.297052Z",
+     "start_time": "2024-07-10T07:27:24.196380Z"
     }
    },
    "source": [
@@ -1439,7 +1439,7 @@
      ]
     }
    ],
-   "execution_count": 34
+   "execution_count": 62
   },
   {
    "cell_type": "markdown",
@@ -1454,8 +1454,8 @@
    "id": "6f5883ed458d4bc9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-08T01:25:04.805449Z",
-     "start_time": "2024-07-08T01:25:02.123196Z"
+     "end_time": "2024-07-10T07:27:32.830296Z",
+     "start_time": "2024-07-10T07:27:24.300203Z"
     }
    },
    "source": [
@@ -2203,15 +2203,15 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 35
+   "execution_count": 63
   },
   {
    "cell_type": "code",
    "id": "5ed8b1bc7d8edac4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-08T01:25:05.842176Z",
-     "start_time": "2024-07-08T01:25:04.807033Z"
+     "end_time": "2024-07-10T07:27:35.887502Z",
+     "start_time": "2024-07-10T07:27:32.836016Z"
     }
    },
    "source": [
@@ -2228,15 +2228,15 @@
     "df_results['rank_position'] = df_results['rank_position'].fillna('NM')"
    ],
    "outputs": [],
-   "execution_count": 36
+   "execution_count": 64
   },
   {
    "cell_type": "code",
    "id": "b0ff58c3a16835b3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-08T01:25:18.397477Z",
-     "start_time": "2024-07-08T01:25:05.848734Z"
+     "end_time": "2024-07-10T07:27:57.993282Z",
+     "start_time": "2024-07-10T07:27:35.909372Z"
     }
    },
    "source": [
@@ -2262,7 +2262,7 @@
     "}\n",
     "\n",
     "# Extraer nombres de países únicos, con su código de 3 letras\n",
-    "unique_countries = df_results[['country_name', 'country_3_letter_code']].drop_duplicates()\n",
+    "df_unique_countries = df_results[['country_name', 'country_3_letter_code']].drop_duplicates()\n",
     "\n",
     "\n",
     "def convert_country_to_name(row):\n",
@@ -2300,10 +2300,10 @@
     "\n",
     "\n",
     "# Aplicar la función de conversión a los nombres de países únicos\n",
-    "unique_countries['converted_country_name'] = unique_countries.apply(convert_country_to_name, axis=1)\n",
+    "df_unique_countries['converted_country_name'] = df_unique_countries.apply(convert_country_to_name, axis=1)\n",
     "\n",
     "# Crear diccionario para mapping\n",
-    "country_mapping = dict(zip(unique_countries['country_name'], unique_countries['converted_country_name']))\n",
+    "country_mapping = dict(zip(df_unique_countries['country_name'], df_unique_countries['converted_country_name']))\n",
     "\n",
     "# Usar mapping de países para asociar cada país en df_results con su nuevo nombre\n",
     "df_results['converted_country_name'] = df_results['country_name'].map(country_mapping)\n",
@@ -2450,15 +2450,15 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 37
+   "execution_count": 65
   },
   {
    "cell_type": "code",
    "id": "39539d24c644021b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-08T01:25:19.487226Z",
-     "start_time": "2024-07-08T01:25:18.398845Z"
+     "end_time": "2024-07-10T07:27:59.478360Z",
+     "start_time": "2024-07-10T07:27:57.994881Z"
     }
    },
    "source": [
@@ -2473,15 +2473,15 @@
     "df_results['country_code'] = df_results['country_code'].fillna(df_results['country_3_letter_code'])"
    ],
    "outputs": [],
-   "execution_count": 38
+   "execution_count": 66
   },
   {
    "cell_type": "code",
    "id": "bba11ec33304283d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-08T01:25:19.499830Z",
-     "start_time": "2024-07-08T01:25:19.490926Z"
+     "end_time": "2024-07-10T07:27:59.486021Z",
+     "start_time": "2024-07-10T07:27:59.480854Z"
     }
    },
    "source": [
@@ -2489,15 +2489,15 @@
     "df_results.rename(columns={'slug_game': 'game_slug'}, inplace=True)"
    ],
    "outputs": [],
-   "execution_count": 39
+   "execution_count": 67
   },
   {
    "cell_type": "code",
    "id": "5d3a6cc2c636dd8f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-08T01:25:22.430148Z",
-     "start_time": "2024-07-08T01:25:19.503185Z"
+     "end_time": "2024-07-10T07:28:02.711477Z",
+     "start_time": "2024-07-10T07:27:59.488281Z"
     }
    },
    "source": [
@@ -2564,7 +2564,7 @@
      ]
     }
    ],
-   "execution_count": 40
+   "execution_count": 68
   },
   {
    "cell_type": "markdown",
@@ -2579,8 +2579,8 @@
    "id": "c155a0816739d5fb",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-08T01:25:22.847077Z",
-     "start_time": "2024-07-08T01:25:22.432591Z"
+     "end_time": "2024-07-10T07:28:03.103293Z",
+     "start_time": "2024-07-10T07:28:02.712973Z"
     }
    },
    "source": [
@@ -3223,15 +3223,15 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 41
+   "execution_count": 69
   },
   {
    "cell_type": "code",
    "id": "c6bdfa9b7e343ebb",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-08T01:25:22.956638Z",
-     "start_time": "2024-07-08T01:25:22.850862Z"
+     "end_time": "2024-07-10T07:28:03.200335Z",
+     "start_time": "2024-07-10T07:28:03.105873Z"
     }
    },
    "source": [
@@ -3239,15 +3239,15 @@
     "df_medals = trim_strings(df_medals)"
    ],
    "outputs": [],
-   "execution_count": 42
+   "execution_count": 70
   },
   {
    "cell_type": "code",
    "id": "994ee70519f0473c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-08T01:25:23.108458Z",
-     "start_time": "2024-07-08T01:25:22.959190Z"
+     "end_time": "2024-07-10T07:28:03.344944Z",
+     "start_time": "2024-07-10T07:28:03.203207Z"
     }
    },
    "source": [
@@ -3265,15 +3265,15 @@
     "df_medals['country_code'] = df_medals['country_code'].fillna(df_medals['country_3_letter_code'])"
    ],
    "outputs": [],
-   "execution_count": 43
+   "execution_count": 71
   },
   {
    "cell_type": "code",
    "id": "8eb69c5f4b3395f0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-08T01:25:23.264980Z",
-     "start_time": "2024-07-08T01:25:23.111198Z"
+     "end_time": "2024-07-10T07:28:03.476908Z",
+     "start_time": "2024-07-10T07:28:03.347014Z"
     }
    },
    "source": [
@@ -3328,7 +3328,7 @@
      ]
     }
    ],
-   "execution_count": 44
+   "execution_count": 72
   },
   {
    "cell_type": "markdown",
@@ -3343,8 +3343,8 @@
    "id": "81df56d54ec8ec40",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-08T01:25:24.381381Z",
-     "start_time": "2024-07-08T01:25:23.267519Z"
+     "end_time": "2024-07-10T07:28:04.655359Z",
+     "start_time": "2024-07-10T07:28:03.479018Z"
     }
    },
    "source": [
@@ -3905,15 +3905,15 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 45
+   "execution_count": 73
   },
   {
    "cell_type": "code",
    "id": "5674629c7cc5a3c3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-08T01:25:24.588580Z",
-     "start_time": "2024-07-08T01:25:24.384846Z"
+     "end_time": "2024-07-10T07:28:04.891558Z",
+     "start_time": "2024-07-10T07:28:04.659461Z"
     }
    },
    "source": [
@@ -3953,15 +3953,15 @@
      ]
     }
    ],
-   "execution_count": 46
+   "execution_count": 74
   },
   {
    "cell_type": "code",
    "id": "685b9d512c6ff356",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-08T01:25:26.744076Z",
-     "start_time": "2024-07-08T01:25:24.592163Z"
+     "end_time": "2024-07-10T07:28:07.619353Z",
+     "start_time": "2024-07-10T07:28:04.893161Z"
     }
    },
    "source": [
@@ -3994,15 +3994,15 @@
     "        df_atletas.loc[df_atletas['athlete_full_name'] == fila_atleta['athlete_full_name'], 'first_game'] = primer_juego\n"
    ],
    "outputs": [],
-   "execution_count": 47
+   "execution_count": 75
   },
   {
    "cell_type": "code",
    "id": "94f25d0648426e12",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-08T01:25:26.797495Z",
-     "start_time": "2024-07-08T01:25:26.746140Z"
+     "end_time": "2024-07-10T07:28:07.702808Z",
+     "start_time": "2024-07-10T07:28:07.622525Z"
     }
    },
    "source": [
@@ -4019,15 +4019,15 @@
     "df_atletas.rename(columns={'game_slug': 'first_game_slug'}, inplace=True)"
    ],
    "outputs": [],
-   "execution_count": 48
+   "execution_count": 76
   },
   {
    "cell_type": "code",
    "id": "cd669f7bd17a6039",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-08T01:25:26.814485Z",
-     "start_time": "2024-07-08T01:25:26.799229Z"
+     "end_time": "2024-07-10T07:28:07.731507Z",
+     "start_time": "2024-07-10T07:28:07.705218Z"
     }
    },
    "source": [
@@ -4035,15 +4035,15 @@
     "df_atletas.drop(columns=['bio'], inplace=True)"
    ],
    "outputs": [],
-   "execution_count": 49
+   "execution_count": 77
   },
   {
    "cell_type": "code",
    "id": "24b85ed866b78a26",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-08T01:26:04.739824Z",
-     "start_time": "2024-07-08T01:25:26.816346Z"
+     "end_time": "2024-07-10T07:28:51.194061Z",
+     "start_time": "2024-07-10T07:28:07.735394Z"
     }
    },
    "source": [
@@ -4110,15 +4110,15 @@
      ]
     }
    ],
-   "execution_count": 50
+   "execution_count": 78
   },
   {
    "cell_type": "code",
    "id": "505e663d2079393a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-08T01:26:08.842368Z",
-     "start_time": "2024-07-08T01:26:04.741249Z"
+     "end_time": "2024-07-10T07:28:55.462948Z",
+     "start_time": "2024-07-10T07:28:51.195666Z"
     }
    },
    "source": [
@@ -4145,15 +4145,15 @@
     "    ['athlete_medals', 'gold_medals', 'silver_medals', 'bronze_medals']].fillna(0).astype(int)\n"
    ],
    "outputs": [],
-   "execution_count": 51
+   "execution_count": 79
   },
   {
    "cell_type": "code",
    "id": "193b990e055092fb",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-08T01:26:08.862570Z",
-     "start_time": "2024-07-08T01:26:08.843947Z"
+     "end_time": "2024-07-10T07:28:55.482299Z",
+     "start_time": "2024-07-10T07:28:55.464558Z"
     }
    },
    "source": [
@@ -4195,15 +4195,15 @@
      ]
     }
    ],
-   "execution_count": 52
+   "execution_count": 80
   },
   {
    "cell_type": "code",
    "id": "4e44fd1a-bebe-445d-b9bd-72eb9cdf4193",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-08T01:26:10.045458Z",
-     "start_time": "2024-07-08T01:26:08.864293Z"
+     "end_time": "2024-07-10T07:28:56.492183Z",
+     "start_time": "2024-07-10T07:28:55.483834Z"
     }
    },
    "source": [
@@ -4941,7 +4941,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 53
+   "execution_count": 81
   },
   {
    "cell_type": "markdown",
@@ -4956,18 +4956,19 @@
    "id": "65da8c4e-e725-4dc0-934a-a8860358407a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-08T01:26:12.895845Z",
-     "start_time": "2024-07-08T01:26:10.047686Z"
+     "end_time": "2024-07-10T07:28:58.851870Z",
+     "start_time": "2024-07-10T07:28:56.494161Z"
     }
    },
    "source": [
     "df_hosts.to_csv(directorio_refined / 'olympic_hosts.csv', index=False)\n",
     "df_atletas.to_csv(directorio_refined / 'olympic_athletes.csv', index=False)\n",
     "df_medals.to_csv(directorio_refined / 'olympic_medals.csv', index=False)\n",
-    "df_results.to_csv(directorio_refined / 'olympic_results.csv', index=False)"
+    "df_results.to_csv(directorio_refined / 'olympic_results.csv', index=False)\n",
+    "df_unique_countries.to_csv(directorio_refined / 'unique_countries.csv', index=False)"
    ],
    "outputs": [],
-   "execution_count": 54
+   "execution_count": 82
   }
  ],
  "metadata": {
